--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 *{
     margin: 0;
     padding: 0;
@@ -205,4 +204,9 @@ main{
         background: none;
         color: var(--always-white);
     }
+}
+
+.hide-warning{
+    opacity: 0;
+    transform: translateY(-10px);
 }
