--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 * {
     margin: 0;
     padding: 0;
@@ -196,6 +197,7 @@ main {
         border: none;
         background: none;
         color: var(--always-white);
+        cursor: pointer;
     }
 }
 
